# ai-hedge-fund-india

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: settings.yaml
samples/: COALINDIA-report.md  KSHINTL-report.md
src/: main.py
src/agents/: aswath_damodaran.py  fii_dii_flow.py  fundamentals.py  growth_agent.py  mohnish_pabrai.py  news_sentiment.py  phil_fisher.py  portfolio_manager.py  radhakishan_damani.py  rakesh_jhunjhunwala.py  rbi_policy.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
src/data/: cache.py  models.py  universe.py
src/data/providers/: base.py  yfinance_provider.py
src/graph/: __init__.py  state.py  workflow.py
src/llm/: models.py
src/tools/: __init__.py
src/utils/: analysts.py  api_key.py  llm.py  progress.py  reporter.py
