[tool.poetry]
name = "ai-hedge-fund-india"
version = "0.1.0"
description = "AI-powered hedge fund for Indian NSE/BSE markets — multi-agent LLM-based analysis with Indian market data"
authors = ["ace <ace@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.40"
pandas = "^2.2.0"
numpy = "^1.26.0"
pydantic = "^2.7.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
colorama = "^0.4.6"
questionary = "^2.0.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langgraph = "^0.2.0"
rich = "^13.0.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hedgefund = "src.main:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
